<resources>
    <string name="app_name">Task2</string>
    <string name="MainText1">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="MainText2">Созданный студентами</string>
    <string name="MainButtonText">Зарегистрироваться</string>
    <string name="MainRegNutton2">Уже есть аккаунт</string>
    <string name="Reg1">Регистрация</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Nickname">Имя или никнейм</string>
    <string name="PaswordRepeat">Повторите пароль</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="it">Другое</string>
    <string name="text3">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="Login2">Вход</string>
    <string name="act">Активность</string>
    <string name="prof">Профиль</string>
    <string name="tab_text1">Моя</string>
    <string name="tab_text2">Пользователей</string>
</resources>

