<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main_Activity">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_registration_bicycles"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/MainText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MainText1"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/ImageView"
        app:layout_constraintStart_toStartOf="@id/ImageView"
        app:layout_constraintEnd_toEndOf="@id/ImageView"/>


    <TextView
        android:id="@+id/MainText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MainText2"
        app:layout_constraintTop_toBottomOf="@id/MainText1"
        app:layout_constraintStart_toStartOf="@id/MainText1"
        app:layout_constraintEnd_toEndOf="@id/MainText1"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif" />

    <Button
        android:id="@+id/MainRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/MainText2"
        app:layout_constraintStart_toStartOf="@id/MainText2"
        app:layout_constraintEnd_toEndOf="@id/MainText2"
        android:backgroundTint="@color/teal_200"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:text="@string/MainButtonText"/>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/MainRegButton"
        app:layout_constraintStart_toStartOf="@id/MainRegButton"
        app:layout_constraintEnd_toEndOf="@id/MainRegButton"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainRegNutton2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />








</androidx.constraintlayout.widget.ConstraintLayout>