<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topAppBar2">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/Login2"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                app:navigationIcon="@drawable/arrow_back"
                android:background="@color/white"/>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/ImageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBar2"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_registration_bicycles"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField5"
        app:layout_constraintTop_toBottomOf="@id/ImageView2"
        app:layout_constraintStart_toStartOf="@id/topAppBar2"
        app:layout_constraintEnd_toEndOf="@id/topAppBar2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Login">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        app:layout_constraintTop_toBottomOf="@id/textField5"
        app:layout_constraintStart_toStartOf="@id/topAppBar2"
        app:layout_constraintEnd_toEndOf="@id/topAppBar2"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@id/textField6"
        app:layout_constraintStart_toStartOf="@id/textField6"
        app:layout_constraintEnd_toEndOf="@id/textField6"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:text="Войти"/>



</androidx.constraintlayout.widget.ConstraintLayout>
